  132 Luca Falavigna	2009-05-25
      Install Contents module

  131 Luca Falavigna	2009-05-25
      Add every supported releases for both Debian and Ubuntu

  130 Luca Falavigna	2009-05-25
      Do not pass --distribution option to pbuilder,
      configfile has all the necessary bits

  129 Luca Falavigna	2009-05-25
      Redirect stdin pbuilder output to /dev/null

  128 Luca Falavigna	2009-05-21
      Pass -E --pedantic options to lintian

  127 Luca Falavigna	2009-05-16
      Add compatibility with pyinotify 0.8.6

  126 Luca Falavigna	2009-04-18
      Improve Contents module code

  125 Luca Falavigna	2009-03-11
      Add Contents module

  124 Luca Falavigna	2009-03-02
      Built packages are now stored in "pool" directory

  123 Luca Falavigna	2009-03-02
      Exit if another instance is already running

  122 Luca Falavigna	2009-02-09
      Use standard man pages, no longer use docbook templates



Tue 2009-01-27 20:36:31 +0100
Stable release: 0.6

  121 Luca Falavigna	2009-01-27
      DateStamp.py module: remove unneeded dot in date string

  120 Luca Falavigna	2009-01-27
      Provide Jaunty configuration file, remove Intrepid one

  119 Luca Falavigna	2009-01-26
      Do not enable modules if modulespath does not exist

  118 Luca Falavigna	2009-01-26
      Update copyright years

  117 Luca Falavigna	2009-01-26
      Update documentation with new features

  116 Luca Falavigna	2009-01-23
      Instruct setup.py to install modules

  115 Luca Falavigna	2009-01-18
      Exit if .changes file does not provide mandatory fields

  114 Luca Falavigna	2009-01-18
      Add DateStamp module

  113 Luca Falavigna	2008-12-02
      Implement lintian support as a module

  112 Luca Falavigna	2008-12-01
      Implement modules core components

  111 Luca Falavigna	2008-11-19
      Add acceptedqueue to allow packages waiting for
      a lock to be built if previously accepted.

  110 Luca Falavigna	2008-11-18
      Add files to packagequeue even if they are