@@ -1,3 +1,6 @@
+  133 Luca Falavigna	2009-05-25
+      Adjust Makefile to match latest modifications
+
   132 Luca Falavigna	2009-05-25
       Install Contents module
 
